# TechDoc-Agent

./: .gitignore  README.md  main.py  pyproject.toml
backend/app/: main.py
backend/app/retrieval/: __init__.py  build_index.py  chunker.py  cleaner.py  ingest.py  loaders.py  vector_store.py
backend/app/schemas/: chat.py  search.py  upload.py
backend/app/tools/: id_gen.py
nb/: fitz.ipynb
