[project]
name = "techdoc-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.135.1",
    "jupyterlab>=4.5.6",
    "pymupdf>=1.27.2",
    "python-multipart>=0.0.22",
    "tqdm>=4.67.3",
    "uvicorn>=0.41.0",
]
