[project]
name = "techdoc-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "faiss-cpu>=1.13.2",
    "fastapi>=0.135.1",
    "jupyterlab>=4.5.6",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "pymupdf>=1.27.2",
    "python-multipart>=0.0.22",
    "sentence-transformers>=5.3.0",
    "torch>=2.10.0",
    "tqdm>=4.67.3",
    "uvicorn>=0.41.0",
]
